# kubeSmartService

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test.py
src/kubesmartservice/: __init__.py  core.py
